--- a/portfolio.html
+++ b/portfolio.html
@@ -247,7 +247,7 @@
               </a>
             </li>
           </ul>
-
+          </address>
       </div>
       <div class="container-net">
         <p class="net-title">Приєднуйтесь</p>
@@ -282,10 +282,20 @@
           </li>
         </ul>
       </div>
+      <div class="footer-mailbox">
+        <p class="mailbox-title">Підпишіться на розсилку</p>
+        <label class="mailbox-label">
+          <input class="mailbox-input" type="email" name="email" placeholder=" E-mail"/>
+        </label>
+        <button class="mailbox-button" type="submit">
+          Підписатися
+          <svg class="mailbox-icon" width="22px" height="22px" >
+            <use href="./images/icons.svg#icon-icon-send">
+            </use>
+          </svg>
+        </button>
+        </div>
     </div>
-
-
-    </address>
   </footer>
 </body>
 
