goit-markup-hw-006

--- a/index.html
+++ b/index.html
@@ -446,8 +446,7 @@
         <label class="mailbox-label">
           <input class="mailbox-input" type="email" name="email" placeholder=" E-mail"/>
         </label>
-        <button class="mailbox-button" type="submit">
-          Підписатися
+        <button class="mailbox-button" type="submit">Підписатися
           <svg class="mailbox-icon" width="22px" height="22px" >
             <use href="./images/icons.svg#icon-icon-send">
             </use>
@@ -522,7 +521,8 @@
             <textarea 
             class="form-textarea" 
             id="person-comment" 
-            name="person-comment" placeholder="Введіть коментар"></textarea>
+            name="person-comment" 
+            placeholder="Введіть коментар"></textarea>
           
             <input
              class="checkbox-input visually-hidden" 
